# open-rag

./: .gitignore  BACKEND_IMPLEMENTATION_PLAN.md  README.md  docker-compose.yml
.github/workflows/: backend.yml  ci.yml  deploy-docs.yml  deploy.yml  frontend.yml
backend/: .dockerignore  .env.example  Dockerfile.backend  alembic.ini  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py  0002_run_outputs.py
backend/app/: main.py  worker.py
backend/app/api/routes/: components.py  docker.py  projects.py  runs.py  settings.py  systems.py
backend/app/core/: config.py  database.py  security.py
backend/app/evaluation/: __init__.py  docker_runtime.py  graph.py  metrics.py  resolver.py
backend/app/models/: models.py
backend/app/schemas/: schemas.py
backend/app/services/: components.py  docker_export.py  projects.py  runs.py  settings.py  systems.py
backend/tests/: test_docker_export.py  test_docker_runtime.py  test_evaluation_graph.py  test_metrics.py  test_schemas.py  test_security.py  test_services.py
docs/: index.md  package.json
docs/.vitepress/: config.ts
docs/guide/: component-library.md  deployment.md  docker-export.md  evaluation-runs.md  getting-started.md  installation.md  system-designer.md  what-is-open-rag.md
frontend/: README.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
frontend/src/app/: App.tsx  routes.tsx
frontend/src/styles/: theme.css
frontend/src/test/: evaluations-page.test.tsx  schemas.test.ts  settings-page.test.tsx  setup.ts  (+2 more)
(+42 files in other folders)
